java spi study  change file search package

--- a/java-spi-study01/file-search/pom.xml
+++ b/java-spi-study01/file-search/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.a.pls.q</groupId>
     <artifactId>file-search</artifactId>
 
     <name>file-search</name>
